modified prometheus values for routing with ingress

--- a/argocd/monitor-stack-argo/values.yaml
+++ b/argocd/monitor-stack-argo/values.yaml
@@ -20,6 +20,9 @@ prometheus:
   server:
     persistentVolume:
       enabled: false  # Disable PV for simplicity
+    extraArgs:
+      - --web.external-url=/prometheus
+      - --web.route-prefix=/prometheus
 
 
 
