--- a/argocd/monitor-stack-argo/values.yaml
+++ b/argocd/monitor-stack-argo/values.yaml
@@ -21,9 +21,8 @@ prometheus:
     persistentVolume:
       enabled: false  # Disable PV for simplicity
     extraArgs:
+      web.route-prefix: /
       web.external-url: /prometheus
-      web.route-prefix: /prometheus
-
 
 
 grafana:
