now checking if grafana is working

--- a/argocd/helm-flask/templates/ingress.yaml
+++ b/argocd/helm-flask/templates/ingress.yaml
@@ -64,8 +64,8 @@ spec:
             name: monitor-stack-prometheus-server
             port:
               number: 80
-      - path: /grafana
-        pathType: Prefix
+      - path: /grafana/?(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: monitor-stack-grafana
