--- a/argocd/monitor-stack-argo/values.yaml
+++ b/argocd/monitor-stack-argo/values.yaml
@@ -20,7 +20,7 @@ prometheus:
   server:
     persistentVolume:
       enabled: false  # Disable PV for simplicity
-    extraArgs:
+    extraArgs: # 2 configurations for /prometheus ingress route to work
       web.route-prefix: /
       web.external-url: /prometheus
 
@@ -30,6 +30,9 @@ grafana:
   grafana.ini:
     date_format:
       default_timezone: "browser"
+    server: # 2 configurations for /grafana ingress route to work
+      root_url: "http://$HOST/grafana/"
+      serve_from_sub_path: true
   service:
     type: ClusterIP
   persistence:
