--- a/argocd/helm-flask/templates/ingress.yaml
+++ b/argocd/helm-flask/templates/ingress.yaml
@@ -27,15 +27,16 @@ metadata:
   name: argocd-ingress
   namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /argocd
-        pathType: Prefix
+      - path: /argocd(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:
           service:
             name: argocd-server
