--- a/argocd/helm-flask/templates/ingress.yaml
+++ b/argocd/helm-flask/templates/ingress.yaml
@@ -5,14 +5,14 @@ metadata:
   name: flask-ingress
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: app.omri.com 
+    http:
       paths:
-      - path: /app
+      - path: /
         pathType: Prefix
         backend:
           service:
@@ -27,16 +27,15 @@ metadata:
   name: argocd-ingress
   namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: argocd.omri.com
+    http:
       paths:
-      - path: /argocd(/|$)(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: argocd-server
@@ -51,22 +50,24 @@ metadata:
   namespace: monitor
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1  # Preserve subpaths
-    nginx.ingress.kubernetes.io/use-regex: "true"   
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: prometheus.omri.com
+    http:
       paths:
-      - path: /prometheus/?(.*)
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: monitor-stack-prometheus-server
             port:
               number: 80
-      - path: /grafana(/|$)(.*)
-        pathType: ImplementationSpecific
+  - host: grafana.omri.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: monitor-stack-grafana
